# prj_experience

./: .gitignore
003_Interview_Knowledge/: 001_const_usage_complete.cpp
004_DLL_Demo/: README.md
004_DLL_Demo/001_doc/: DLL_Usage_Guide_Based_on_DLL_Demo.md  Second_DLL_Library_MyLibrary002_Usage_Guide.md
004_DLL_Demo/MyApp/: MyApp.vcxproj  main.cpp
004_DLL_Demo/MyLibrary/: MyLibrary.cpp  MyLibrary.h  MyLibrary.vcxproj
004_DLL_Demo/MyLibrary002/: MyLibrary002.cpp  MyLibrary002.h  MyLibrary002.vcxproj
005_C_C++_Interop_Examples/example1_cpp_calls_c/: CMakeLists.txt  main.cpp
005_C_C++_Interop_Examples/example1_cpp_calls_c/c_lib/: math.c  math.h
005_C_C++_Interop_Examples/example2_c_calls_cpp/: CMakeLists.txt  main.c
005_C_C++_Interop_Examples/example2_c_calls_cpp/cpp_lib/: calculator.cpp  calculator.h
005_C_C++_Interop_Examples/example3_mixed_project/: CMakeLists.txt  main.cpp
005_C_C++_Interop_Examples/example3_mixed_project/c_code/: math_utils.h
005_C_C++_Interop_Examples/example3_mixed_project/cpp_code/: calculator.cpp  calculator.h
005_C_C++_Interop_Examples/example4_opaque_pointer/: CMakeLists.txt  main.c
005_C_C++_Interop_Examples/example4_opaque_pointer/cpp_lib/: wrapper.cpp  wrapper.h
